Editor: fix the last row style when the editor is collapsed
When the editor is closed, we render the last row in the view mode.
Prior to this fix this row would inherit some unwanted visual properties,
like surrounding shadow and a header. This commit makes that row
appear as any other view row.

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -223,6 +223,16 @@ div.edit-row-wrapper
     overflow-x: hidden;
 }
 
+div.edit-row-wrapper.view-mode
+{
+    box-shadow: none;
+}
+
+div.edit-row-wrapper.view-mode .header-row
+{
+    display: none;
+}
+
 .translate-table-wrapper
 {
     position: fixed;
